# crascii

./: Cargo.toml  README  README.md  pyproject.toml  test_snascii.py
.github/workflows/: release.yml
src/: charsets.rs  lib.rs  main.rs  python_bindings.rs
