[package]
name = "crascii"
authors = ["Prometek"]   
version = "0.0.1"
edition = "2021"
description = "A Rust library for converting images to ASCII art"
license = "MIT"
repository = "https://github.com/prometek/crascii"

[dependencies]
image = "0.25.4"
imageproc = "0.25.0"
rusttype = "0.9.2"
clap = { version = "4.1.4", features = ["derive"] }
ansi_term = "0.12.1"
ab_glyph = "0.2.29"
pyo3 = { version = "0.19.0", features = ["extension-module"], optional = true }
rand = "0.8.5"

[lib]
name = "crascii"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "crascii"
path = "src/main.rs"

[features]
python = ["pyo3"]

[package.metadata.maturin]
name = "crascii"
